# getarch

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  pyrightconfig.json
.github/workflows/: build-and-release.yaml  pre-commit.yaml  test-getarch.yaml
examples/: config-base-btrfs.json  config-base-ext4.json  config.json
getarch/: __init__.py  command.py  data.py  installer.py  parser.py  validator.py
test_resources/: create_vm.sh  passwd.sh  run_vm.sh  transfer.sh
