[tool.poetry]
name = "getarch"
version = "1.0.0"
description = "A simple way to install archlinux"
authors = ["fabifont <fabio.fontana@mailbox.org>"]
license = "GPL-3.0"
readme = "README.md"
packages = [{include = "getarch"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.2"
flake8 = "^6.0.0"
black = "^23.3.0"
pyright = "^1.1.313"
pyinstaller = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''


[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
